--- a/foryou.html
+++ b/foryou.html
@@ -38,7 +38,7 @@
         <div class="slide fade"><img src="55.jpg" alt="Picture 1" /></div>
         <div class="slide fade greeting-slide">
           <h2>To My Love 💖</h2>
-          <p>You are my sunshine, my reason to smile every day. I’ll love you forever. 💕</p>
+          <p>Para sayo to mahal ko ginawa ko to para magpapansin sayo haha, de love ko gusto ko lang sabihin sayo na sobrang mahal na mahal talaga kita, gusto ko lang den sabihin na pure na pure yung intensyon ko sayo, lahat ng sinasabe ko sayo mahal totoo lahat yon at lahat ng pangako ko sayo tutuparin ko, ipaglalaban kita mahal hanggang dulo hanggang mamatay ako, hayaan mong patunayan ko yung sarili ko sayo, gusto ko tuparin mga pangarap ko at pangarap natin na kasama kita, gusto ko mag build ng health relationship at family sayo, papakasalan kita mahal gusto ko ikaw makasama ko hanggang pagtanda natin</p>
         </div>
       </div>
     </div>
@@ -58,3 +58,4 @@
   <script src="foryou.js"></script>
 </body>
 </html>
+
